--- a/style.css
+++ b/style.css
@@ -12,3 +12,82 @@
     font-family: "Karla", sans-serif;
 
 }
+
+body {
+    background-color: #1C1C1C;
+
+}
+
+.main-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 60px;
+}
+
+
+
+.main-display {
+    background-color: #ECFDF5;
+    display: flex;
+    flex-direction: column;
+    width: 550px;
+    height: 550px;
+    padding: 115px 52px;
+
+
+}
+
+
+.main-display__desc h1 {
+    font-size: 40px;
+    line-height: 40px;
+    letter-spacing: -2.5%;
+    font-weight: 800;
+    color: #2B283A;
+    margin-bottom: 10px;
+
+
+}
+
+.main-display__desc .main-display__desc-txt-color {
+    color: #10B981;
+}
+
+.main-display__desc button {
+    background-color: #10B981;
+    padding: 9px 17px;
+    border-radius: 2px;
+    color: #FFFFFF;
+    border: solid #10B981;
+    margin-top: 51px;
+    Font-style: 500;
+    font-size: 16px;
+    Line-height: 24px;
+    Line-height: 124%;
+
+}
+
+
+
+.main-display__password-block-container {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+}
+
+
+.main-display__password-block-container .main-display__password-block-input, 
+.main-display__password-block-container .main-display__password-block-password-display {
+    background-color: #273549;
+    padding: 9px 17px;
+    border-radius: 6px;
+    border: solid 1px #273549;
+    width: 211px;
+    color: #5DEF92;
+    margin-top: 70px;
+
+}
+
+
+
